# refactored-eureka

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: bnr.py  comparator.py  credit.py  depozit.py  investitii.py  optimizare.py  schemas.py  unit_linked.py
backend/app/core/: cache.py  config.py  telemetry.py
backend/app/finance/: common.py  credit.py  depozit.py  investitii.py  optimizare.py  unit_linked.py
backend/app/services/: bnr.py
backend/app/tests/: test_bnr.py  test_comparator.py  test_credit_parity.py  test_depozit_parity.py  test_investitii_monte_carlo.py  test_investitii_parity.py  test_optimizare_parity.py  test_unit_linked.py  test_unit_linked_monte_carlo.py
docs/: db-operations.md  details.md  planning.md  progress.md  task.md
web/: .env.example  instrumentation-client.ts  instrumentation.ts  next.config.ts  package-lock.json  package.json  payload.config.ts  sentry.edge.config.ts  sentry.server.config.ts
web/app/: robots.ts  sitemap.ts
web/collections/: AuditLogs.ts  CategoriiEducationale.ts  ContinutEducational.ts  CursuriValutare.ts  DemoRequests.ts  Disclaimere.ts  DobanziDepozit.ts  Firme.ts  FonduriETF.ts  IndiciIstorici.ts  Inflatii.ts  Media.ts  ProduseCredit.ts  ProduseUL.ts  Simulari.ts  Users.ts
web/components/: CurrencyToggle.tsx  DemoRequestForm.tsx  Disclaimer.tsx  Footer.tsx  HomeToolsGrid.tsx  InflationToggle.tsx  Navbar.tsx  SaveSimulationPanel.tsx  ThemeToggle.tsx  ui.tsx
web/lib/: audit-log.ts  auth.ts  blog.ts  bnr.ts  cms.ts  format.ts  pdf.ts  posthog-server.ts  (+6 more)
(+69 files in other folders)
