[project]
name = "finance-backend"
version = "0.1.0"
description = "Motor de calcul pentru platforma de analiză financiară"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test functions intentionally carry uppercase scenario labels
# (e.g. `test_favors_A`, `test_scenarioB_matches`) — these aid readability
# when tests map to lettered scenarios in the calc engine. N802 is noise here.
"app/tests/*" = ["N802"]

[tool.mypy]
python_version = "3.11"
strict = true

# Test code gets pragmatic typing — strict mode causes false-positives with
# pytest fixtures, **kwargs dict spread into Pydantic models, and Literal[0]
# comparisons. Production code stays strict.
[[tool.mypy.overrides]]
module = "app.tests.*"
disallow_untyped_defs = false
disable_error_code = ["arg-type", "misc", "no-untyped-def"]
